--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="about">
         <div class="about-container">
             <div class="about-image">
-                <img src="WechatIMG801.jpeg" alt="Fanyi Kong">
+                <img src="https://github.com/kfy123/kfyswebsite/blob/main/image/WechatIMG801.jpeg" alt="Fanyi Kong">
                 <p><i class="fas fa-envelope"></i> <a href="mailto:Kong.fa@northeastern.edu">Kong.fa@northeastern.edu</a></p>
                 <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/fanyi-kong" target="_blank">Fanyi Kong</a></p>
                 <p><i class="fas fa-file"></i> <a href="path_to_cv.pdf" target="_blank">CV</a></p>
