--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             </div>
         </div>
     </section>
+    <section id="cv">
+        <div class="cv-container">
+            <h2>Curriculum Vitae</h2>
+            <embed src="https://raw.githubusercontent.com/kfy123/kfyswebsite/main/file/ResumeforPhD.pdf" width="100%" height="600px" type="application/pdf">
+        </div>
+    </section>
     <section id="publications">
         <h2>Journal Publications</h2>
         <ul>
