--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="cv">
         <div class="cv-container">
             <h2>Curriculum Vitae</h2>
-            <embed src="https://raw.githubusercontent.com/kfy123/kfyswebsite/main/file/ResumeforPhD.pdf" width="100%" height="600px" type="application/pdf">
+            <iframe src="https://raw.githubusercontent.com/kfy123/kfyswebsite/main/file/ResumeforPhD.pdf" width="100%" height="600px"></iframe>
         </div>
     </section>
     <section id="publications">
