--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="cv">
         <div class="cv-container">
             <h2>Curriculum Vitae</h2>
-            <iframe src="https://raw.githubusercontent.com/kfy123/kfyswebsite/main/file/ResumeforPhD.pdf" width="100%" height="600px"></iframe>
+            <iframe src="https://drive.google.com/file/d/1g6vSp_a6ytfAX5cEweUWbl3V8R7JIe6R/preview" width="100%" height="600px"></iframe>
         </div>
     </section>
     <section id="publications">
