--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         </div>
     </section>
     <section id="cv">
-        <div class="cv-container">
-            <h2>Curriculum Vitae</h2>
-            <iframe src="https://drive.google.com/file/d/1g6vSp_a6ytfAX5cEweUWbl3V8R7JIe6R/preview" width="100%" height="600px"></iframe>
+        <div class="about-container">
+            <div class="about-image">
+                <h2>Curriculum Vitae</h2>
+                <iframe src="https://drive.google.com/file/d/FILE_ID/preview" width="100%" height="600px" frameborder="0"></iframe>
+            </div>
         </div>
     </section>
     <section id="publications">
